Update on details and title

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Strata by HTML5 UP</title>
+		<title>Homepage | Yogi Cahyono - Data Science/Analytics</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -32,7 +32,7 @@
 							<h2>Hello,<br />
 							My name is Yogi.</h2>
 						</header>
-						<p>I'm an ongoing graduate student at the University of Edinburgh, majoring in Finance, Technology, and Policy (Fintech). <br /> <br /> My areas of interest include analytics, problem-solving, data-engineering and machine learning. With a detail-oriented mind, I enjoy working with product and business teams to drive decisions using data. <br /> <br /> Since 2014, I have been blending my analytical with programming skills. My last professional job was at Tokopedia (GoTo － Holding Company) as an Analytics Lead, supporting Payment and FinTech day-to-day decision-making in Tokopedia.</p>
+						<p>I'm an ongoing graduate student at the University of Edinburgh, majoring in Finance, Technology, and Policy (Fintech). <br /> <br /> My areas of interest include analytical skills, problem-solving, data-engineering and machine learning. I am detail-oriented and enjoy working with product and business teams to drive decisions using data. As my master's specialisation concentrates on FinTech, I have a vast appeal on blockchain and the financial market and am keen to utilise my analytical capabilities to tackle issues in financial sectors. <br /> <br /> Since 2014, I have been blending my analytical skills with programming skills. My last professional job was at Tokopedia (GoTo － Holding Company) as an Analytics Lead, supporting Payment and FinTech day-to-day decision-making in Tokopedia..</p>
 						<ul class="actions">
 							<li><a href="https://drive.google.com/file/d/1AJR_LHB1hqlNmnE6l_IKKvbvHY99Yco6/view?usp=share_link" class="button">Get My Resume</a></li>
 						</ul>
@@ -451,7 +451,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<li><a href="mailto:yg.cahyono@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Yogi Cahyono</li><li>Handcrafted by Me, Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Yogi Cahyono</li><li>Handcrafted by Me. </br> <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
