--- a/index.html
+++ b/index.html
@@ -448,6 +448,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<li><a href="https://www.linkedin.com/in/yogitricahyono/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 						<li><a href="https://github.com/yogitricahyono" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://www.instagram.com/ygcahyono/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://www.strava.com/athletes/19724122" class="icon brands fa-strava"><span class="label">strava</span></a></li>
 						<li><a href="mailto:hello@ygtc.dev" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
