--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 							<h2>Hello,<br />
 							My name is Yogi.</h2>
 						</header>
-						<p>I'm an ongoing graduate student at the University of Edinburgh, majoring in Finance, Technology, and Policy (Fintech). <br /> <br /> My areas of interest include analytical skills, problem-solving, data-engineering and machine learning. I am detail-oriented and enjoy working with product and business teams to drive decisions using data. As my master's specialisation concentrates on FinTech, I have a vast appeal on blockchain and the financial market and am keen to utilise my analytical capabilities to tackle issues in financial sectors. <br /> <br /> Since 2014, I have been blending my analytical skills with programming skills. My last professional job was at Tokopedia (GoTo － Holding Company) as an Analytics Lead, supporting Payment and FinTech day-to-day decision-making in Tokopedia.</p>
+						<p>I'm an ongoing graduate student at the University of Edinburgh, majoring in Finance, Technology, and Policy (Fintech). <br /> <br /> My areas of interest include analytical skills, problem-solving, data-engineering and machine learning. I am detail-oriented and enjoy working with product and business teams to drive decisions using data. As my master's specialisation concentrates on FinTech, I have a vast appeal on blockchain and the financial market and am keen to utilise my analytical capabilities to tackle issues in financial sectors. <br /> <br /> Since 2014, I have been blending my analytical with programming skills. My last professional job was at Tokopedia (GoTo － Holding Company) as an Analytics Lead, supporting Payment and FinTech day-to-day decision-making in Tokopedia.</p>
 						<ul class="actions">
 							<li><a href="https://drive.google.com/file/d/1AJR_LHB1hqlNmnE6l_IKKvbvHY99Yco6/view?usp=share_link" class="button">Get My Resume</a></li>
 						</ul>
@@ -114,7 +114,7 @@
 									</li> -->
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="mailto:hello@ygtc.dev">hello@ygtc.dev</a>
+										<a href="mailto:contact@ygtc.dev">contact@ygtc.dev</a>
 									</li>
 								</ul>
 							</div>
@@ -449,7 +449,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<li><a href="https://github.com/yogitricahyono" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://www.instagram.com/ygcahyono/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="https://www.strava.com/athletes/19724122" class="icon brands fa-strava"><span class="label">strava</span></a></li>
-						<li><a href="mailto:hello@ygtc.dev" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="mailto:contact@ygtc.dev" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Yogi Cahyono</li><li>Handcrafted by Me <a href="http://html5up.net">HTML5.</a></li>
